--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-header": "^2.0.5",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-print": "^5.0.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svgmin": "^1.2.4",
     "moment": "^2.22.0",
     "npm-run-all": "^4.1.2",
     "run-sequence": "^2.2.1"
