--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "treehouse-project-9",
+  "description": "Build awesome Flick Gallery using ReactJS",
   "version": "1.0.0",
   "author": "Max Eremin",
   "license": "MIT",
